Finish api deisgn and defaults implementations of sessions and login